--- a/EVENTS page5.html
+++ b/EVENTS page5.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-m" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-m" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -103,7 +103,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="cPfRsvvNQAvDvgcJMTDft4LQQnHRZuev6JJdBWcGZ5NBFSmrRn1kRGnj5lkCJhyeuCXUtjxEIjWkRqGsC+mSsgbslSoJ1iXLxHpKOjKmz+qTtY6qjYsxMQk+XvRnW2Xn" data-form-email="true">
+                    <input type="hidden" value="4GV3rcBBcaJyJ0hOduCoGSHIgNx/EiUmh6woIO1szn2BVX5JMCpIklOtuKMMwzl2Y82cIo1AYnheJ6/pBSbnXPmSi50VrEW/clQ2PyNuMRHTetog9sgrW2F0JOudUTnq" data-form-email="true">
 
                     
 
