--- a/PARTNERS page3.html
+++ b/PARTNERS page3.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-i" style="background-color: rgb(85, 57, 130); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-i" style="background-color: rgb(85, 57, 130); padding-top: 90px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -103,7 +103,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="0BocFZUfblDjN5yQdjy2ZQF3IP5GUHJSNSnxQIrekaUt+xOdCscsEcAd7AJmEpdFBEZlxAK43A6j/CVBlIlNW1toyIkaYYAfOYqJGr3rND+v/wUYnEfzgIO9m+r8T1IB" data-form-email="true">
+                    <input type="hidden" value="f92rbpAkblageRF3A6kNSkAC5AM+6BXfZMapykOpOVEJhQhVdJxDA4I+ZVVAA5z91bwlHmTZ3mi0usK7wjTHmwsXu3+S/njIiijC5pR+hlti8qRixLsdCRzR5ejwW3mt" data-form-email="true">
 
                     
 
